// https://github.com/gogo/protobuf
// protoc --gogo_out=. --proto_path=./ agents.proto
syntax = "proto3";
package agents.pb;

message AgentMessage {
	enum Type {
		NULL = 0;
		ADD_AS_TAB = 1;
		GET_AS_TAB = 2;
		COUNT_AS_TAB = 3;
		BRIDGE = 4;
	}

	message AgentServer {
	    // protocol id
		bytes pid = 1;
		repeated bytes peers = 2;
	}

	// defines what type of message it is.
	Type type = 1;

	AgentServer agentServer = 2;

	repeated AgentServer agentServerList = 3;

    int32 count = 4;
}
